feature(task): db config, models, routes

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+#MONGO_URI=mongodb+srv://admin:ZIefI6R59BPATUMQ@todolist.d7wpi.mongodb.net/?retryWrites=true&w=majority&appName=todolist
 MONGO_URI=mongodb://localhost:27017/todolist
